2013-10-27  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.6.0)
	* matlab/test/test_surface_param.m: (0.6.0)

	- Rewrite 'smdscale', previously called 'sphisomap'. We no longer
	use Dijkstra, so it's not Isomap. We use Fast Marching to compute
	distances instead by default (although Dijkstra can still be
	used). Parameters to the distance algorithm and to the MDS
	algorithm are passed with param.options and param.options2, as
	with previous methods.

	- In 'cald', add missing help for param.tri.

	- Check number of output arguments within each parameterization
	case. They have 1 or 2.

	* ManifoldToolbox/dmatrix_mesh.m: (0.4.2)

	- Fix bug. constraint_map' can create distance matrices slightly
	asymmetric. We take the mean to make it symmetric.

	* matlab/ManifoldToolbox/lmdscale.m: (0.1.1)

	- Fix bug. When I copied the code from smdscale, I forgot to
	remove the references to latitude and longiture. In this function,
	we work on the UV plane, not on the sphere.

	* matlab/PointsToolbox/surface_param.m: (0.5.3)

	- Fix help header for 'cald'.

	* matlab/PointsToolbox/surface_param.m: (0.5.2)
	* matlab/test/test_surface_param.m: (0.5.2)

	- Rewrite 'cald' (Li Shen's Control Area and Length Distortions
	(CALD) spherical parametrization). Pass parameters all together
	under param.options.

	* Add matlab/test/data/008-lv-resampled-0_31.mha:

	- Segmentation of a low resolution LV with detail and papillary
	muscles removed, for closed surface parameterization tests.

2013-10-25  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.5.1)
	* matlab/test/test_surface_param.m: (0.5.1)

	- Rewrite help of 'sphproj' and write test for it. Rename
	estimated sphere radius as sphrad for uniformity with the other
	methods.

	* matlab/PointsToolbox/surface_param.m: (0.5.0)
	* matlab/test/test_surface_param.m: (0.5.0)

	- Rewrite method 'lmdscale', that was non-functional. Also, now